# stacki

./: .Jenkinsfile  .flake8  .gitignore  3rdparty.md  Jenkinsfile  LICENSE-3rdparty.txt  LICENSE-ROCKS.txt  LICENSE.txt  Makefile  NOTES  README-distro-support.md  README.md  cleanup-move-op.sh  cookies.txt  debian.md  hts-log.txt  index.html  index5f87.html  manifest  manifest.3rdparty  params.json  respin  rollversion.mk  setup-move-op.sh  version-armv7hl.mk  version-x86_64.mk  version.mk
Intro/: index.html
Intro/feed/: index.html
centos/: 3rdparty.md  Makefile  bootstrap.mk  manifest  manifest.3rdparty  version.mk
centos/graph/: backend.xml  core.xml  frontend.xml  redhat-backend.xml  redhat-base.xml  redhat-frontend.xml
centos/manifest.d/: centos.manifest
centos/nodes/: apache.xml  backend.xml  base.xml  ca.xml  central.xml  client.xml  database-data.xml  database-schema.xml  database.xml  debug-post.xml  debug-pre.xml  dhcp-server.xml  dns-server.xml  everything.xml  firewall-base.xml  firewall-client.xml  firewall-server.xml  foundation-server.xml  frontend.xml  grub.xml  insert-rolls.xml  install.xml  kernel-server.xml  logrotate.xml  ludicrous-client.xml  ludicrous-server.xml  mq-base.xml  mq-client.xml  mq-server.xml  networking-client.xml  networking-server.xml  node-certs.xml  node.xml  peerdone.xml  postshell.xml  pre-ssh-key.xml  pxe.xml  pxeboot.xml  redhat-bootaction.xml  repo-client.xml  (+25 more)
centos/src/: Makefile
comments/feed/: index.html
common/: 3rdparty.json  3rdparty.md  Makefile  manifest  manifest.3rdparty  version.mk
common/graph/: .gitignore  ansible.xml  backend.xml  base.xml  common-backend.xml  common-core.xml  common-frontend.xml  everything.xml  frontend.xml  replicant.xml
common/manifest.d/: .gitignore  common.manifest  common.sles11  foundation-python-mod-wsgi.sles11
common/nodes/: .gitignore  ansible-backend.xml  ansible-base.xml  ansible-server.xml  ansible.xml  apache.xml  attr-docs.xml  aws-client.xml  aws-server.xml  aws-ssh-key.xml  backend.xml  barnacle.xml  base.xml  builder.xml  ca.xml  central.xml  checklist.xml  client.xml  database-data-init.xml  database-data.xml  database-migration.xml  database-schema.xml  database.xml  debug-post.xml  debug-pre.xml  dhcp-server.xml  dns-server.xml  docker-server.xml  everything.xml  firewall-base.xml  firewall-client.xml  firewall-server.xml  foundation-python-server.xml  foundation-python.xml  foundation-server.xml  frontend-server.xml  graphql-api.xml  graphql.xml  hash-client.xml  hypervisor.xml  (+47 more)
common/src/: Makefile  order-stacki-sles11.mk  suse.mk
common/src/foundation/python-packages/: .gitignore  LICENSE.txt  Makefile  nosat.txt  packages.json  pip2src  pyproject.toml  version.mk  versions.json
debian/: 3rdparty.json  bootstrap.mk  manifest
debian/graph/: debian-frontend.xml
debian/nodes/: backend.xml  debian-base.xml  debian-bootaction.xml  server.xml
debian/src/: Makefile
docker/: Dockerfile  Makefile  README.md  barnacle.sh  docker-compose.yaml
docker/frontend/: Dockerfile  Makefile  barnacle.sh
docker/redis/: Dockerfile  docker-compose.yaml  redis.conf.j2  redis.yaml  start.sh
graph/: backend.xml  core.xml  frontend.xml
graphs/default/: core.xml  frontend.xml
hts-cache/: new.lst  new.txt
nodes/: apache.xml  backend.xml  base.xml  ca.xml  central.xml  client-firewall.xml  client.xml  database-data.xml  database-schema.xml  database.xml  debug-post.xml  debug-pre.xml  dhcp-server.xml  discover-disks.xml  disk-stamp.xml  dist.xml  dns-server.xml  do-partition.xml  everything.xml  firewall-base.xml  firewall-client.xml  firewall-server.xml  firewall.xml  foundation-base.xml  foundation-server.xml  frontend.xml  grub-client.xml  grub-server.xml  grub.xml  insert-rolls.xml  install.xml  kernel-server.xml  logrotate.xml  ludicrous-client.xml  ludicrous-server.xml  networking-client.xml  networking-server.xml  node-certs.xml  node.xml  ntp-client.xml  (+39 more)
redhat/: bootstrap.mk
redhat/graph/: redhat-backend.xml  redhat-base.xml  redhat-frontend.xml
redhat/nodes/: apache.xml  backend.xml  base.xml  ca.xml  central.xml  client.xml  database-data.xml  database-schema.xml  dhcp-server.xml  dns-server.xml  everything.xml  firewall-base.xml  firewall-client.xml  firewall-server.xml  foundation-server.xml  frontend.xml  insert-pallets.xml  insert-rolls.xml  install.xml  kernel-server.xml  logrotate.xml  ludicrous-client.xml  ludicrous-server.xml  networking-client.xml  networking-server.xml  node-certs.xml  node.xml  nsswitch.xml  peerdone.xml  pre-ssh-key.xml  pxe.xml  pxeboot.xml  redhat-base.xml  redhat-bootaction.xml  repo-client.xml  repo-server.xml  resolv.xml  restapi.xml  routes-client.xml  selinux.xml  (+15 more)
redhat/pallet_hooks/: pallet_hooks.json
redhat/src/: Makefile
sles/: 3rdparty.json  3rdparty.md  Makefile  bootstrap.mk  manifest  manifest.3rdparty  version.mk
sles/graph/: backend.xml  base.xml  frontend.xml  sles-backend.xml  sles-base.xml  sles-frontend.xml  sles.xml
sles/manifest.d/: sles.manifest  sles.sles11  sles.sles12  sles.sles15
sles/nodes/: add-on.xml  apache.xml  backend.xml  base.xml  bootloader.xml  builder.xml  ca.xml  chroot-scripts-caasp.xml  chroot-scripts.xml  database-data.xml  database-schema.xml  database.xml  dhcp-server.xml  dns-server.xml  firewall-base.xml  firewall-client.xml  firewall-server.xml  foundation-python.xml  foundation-server.xml  general.xml  init-scripts.xml  install.xml  kdump.xml  kernel-server.xml  logrotate.xml  ludicrous-server.xml  mq-base.xml  mq-client.xml  mq-server.xml  networking-server.xml  node-certs.xml  node.xml  partitioning.xml  post-scripts.xml  postpartitioning-scripts.xml  pre-scripts.xml  pxe.xml  restapi.xml  routes-server.xml  selinux.xml  (+18 more)
sles/pallet_hooks/: pallet_hooks.json
sles/src/: Makefile  order-stacki-sles11.mk
src/: Makefile
src/RPMS/: LICENSE.md  LICENSE.txt  (+3 more)
test-framework/: .gitignore  Makefile  README.md  Vagrantfile  requirements.txt  run-tests.sh
ubuntu/: 3rdparty.json  3rdparty.md  README.md  bootstrap.mk
www.stacki.com/: index.html  xmlrpc0db0.php
(+3461 files in other folders)
